k8s/52-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: petclinic
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
